--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,43 @@
-# Umgebungsvariablen
-.env
-*.env
 
 # Python
 __pycache__/
 *.py[cod]
 *$py.class
-venv/
+*.so
+.Python
 env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
 
-# Große Dateien
-qdrant_storage/
+# Environment variables
+.env
 
-# Andere
+# Large data files (if needed)
+*.zip
+*.tar.gz
+
+# Virtual environment
+venv/
+ENV/
+
+# IDE specific files
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# OS specific files
 .DS_Store
+Thumbs.db
